--- a/imap_processing/cdf/config/imap_mag_l1_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_mag_l1_variable_attrs.yaml
@@ -1,3 +1,14 @@
+# <=== Label Attributes ===>
+# LABL_PTR_i expects VAR_TYPE of metadata with char data type.
+# We need to define this if we have DEPEND_1 or more.
+# TODO: I am not sure what the FIELDNAM should be.
+# I tried best to match this: https://spdf.gsfc.nasa.gov/istp_guide/variables.html#Metadata_eg1
+direction_label:
+  CATDESC: magnetic field vector data
+  FIELDNAM: Magnetic Field Vector
+  FORMAT: A3
+  VAR_TYPE: metadata
+
 default_attrs: &default
   # Assumed values for all variable attrs unless overwritten
   DEPEND_0: epoch
@@ -23,8 +34,8 @@ raw_vector_attrs:
   <<: *default_coords
   CATDESC: Raw unprocessed magnetic field vector data in bytes
   DEPEND_1: direction
+  LABL_PTR_1: direction_label
   FIELDNAM: Magnetic Field Vector
-  LABLAXIS: Raw binary magnetic field vector data
   FORMAT: I3
 
 vector_attrs:
