--- a/imap_processing/cdf/config/imap_swe_l1b_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_swe_l1b_variable_attrs.yaml
@@ -84,8 +84,8 @@ default_attrs: &default
   SCALETYP: linear
 
 science_data:
-  <<: *default
   CATDESC: Electron count rates organized by voltage step and spin sector and CEM
+  DEPEND_0: epoch
   DEPEND_1: energy
   DEPEND_2: angle
   DEPEND_3: cem
@@ -96,7 +96,6 @@ science_data:
   FIELDNAM: Counts rate by volt step and spin sector and CEM
   FORMAT: E14.7
   FILLVAL: -1.0000000E+31
-  LABLAXIS: Count Rates
   UNITS: counts/sec
   VALIDMAX: 0.000015514
   VALIDMIN: 0
@@ -106,8 +105,8 @@ science_data:
     Dividing max counts by acq_duration gave validmax
 
 sci_step_acq_time_sec:
-  <<: *default
   CATDESC: Acquisition time organized by voltage step and spin sector and CEM
+  DEPEND_0: epoch
   DEPEND_1: energy
   DEPEND_2: angle
   DEPEND_3: cem
@@ -117,7 +116,6 @@ sci_step_acq_time_sec:
   DISPLAY_TYPE: spectrogram
   FIELDNAM: Acquisition by volt step and spin sector and CEM
   FILLVAL: -1.0000000E+31
-  LABLAXIS: Count Acq Time
   UNITS: sec
   VAR_TYPE: support_data
   VAR_NOTES: >
