--- a/imap_processing/cdf/config/imap_hi_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_variable_attrs.yaml
@@ -1,3 +1,11 @@
+# <=== Label Attributes ===>
+# LABL_PTR_i expects VAR_TYPE of metadata with char data type
+hi_hist_angle_label:
+  CATDESC: Angle bin centers for histogram data.
+  FIELDNAM: ANGLE
+  FORMAT: A5
+  VAR_TYPE: metadata
+
 # ------- Default attributes section -------
 default_attrs: &default
   DEPEND_0: epoch
@@ -183,8 +191,8 @@ hi_hist_counters:
   FIELDNAM: "{counter_name} histogram"
   VALIDMAX: 4095
   DEPEND_1: angle
+  LABL_PTR_1: angle_label
   FORMAT: I4
-  LABLAXIS: "{counter_name}"
 
 # ======= L1B DE Section =======
 hi_de_coincidence_type:
