--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,11 @@ repos:
     - id: ruff
       args: [--fix]
     - id: ruff-format
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.6
+    hooks:
+      - id: codespell
+        files: ^.*\.(py|md|rst|yml)$
   - repo: https://github.com/python-poetry/poetry
     rev: '1.8.0'  # add version here
     hooks:
