--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-cdflib = "==1.3.1"
-imap-data-access = ">=0.5.0"
+cdflib = ">=1.3.1"
+imap-data-access = ">=0.10.1"
 python = ">=3.9,<4"
 space_packet_parser = "^5.0.1"
 spiceypy = ">=6.0.0"
