--- a/imap_processing/cdf/config/imap_ultra_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_ultra_l1a_variable_attrs.yaml
@@ -7,7 +7,7 @@ ultra_metadata_attrs:
   FORMAT: I19
   LABLAXIS: Metadata
   SCALE_TYP: linear
-  UNITS: ” ”
+  UNITS: " "
   VALIDMIN: -9223372036854775808
   VALIDMAX: 9223372036854775807
   VAR_TYPE: support_data
@@ -17,9 +17,9 @@ ultra_support_attrs:
   FIELDNAM: metadata
   FILLVAL: -9223370000000000000
   FORMAT: I19
-  LABLAXIS: “none”
+  LABLAXIS: "none"
   SCALE_TYP: linear
-  UNITS: ” ”
+  UNITS: " "
   VALIDMIN: -9223372036854775808
   VALIDMAX: 9223372036854775807
   VAR_TYPE: support_data
@@ -29,20 +29,20 @@ string_base_attrs:
   FIELDNAM: string_metadata
   FILLVAL: -9223370000000000000
   FORMAT: I1
-  LABLAXIS: “none”
+  LABLAXIS: "none"
   SCALE_TYP: linear
   VALIDMIN: 0
   VALIDMAX: 1
   VAR_TYPE: support_data
   DISPLAY_TYPE: no_plot
   DEPEND_0: epoch
-  UNITS: ” ”
+  UNITS: " "
 packet_data_attrs:
   CATDESC: packet data
   FIELDNAM: packet_data
   FILLVAL: -9223370000000000000
   FORMAT: I19
-  LABLAXIS: “none”
+  LABLAXIS: "none"
   SCALE_TYP: linear
   VALIDMIN: -9223372036854775808
   VALIDMAX: 9223372036854775807
