--- a/imap_processing/cdf/config/imap_ultra_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_ultra_l1a_variable_attrs.yaml
@@ -30,9 +30,11 @@ string_base_attrs:
   CATDESC: string metadata
   FIELDNAM: string_metadata
   FORMAT: A80
-  VAR_TYPE: metadata
+  LABLAXIS: "none"
+  VAR_TYPE: support_data
   DISPLAY_TYPE: no_plot
   DEPEND_0: epoch
+  UNITS: " "
 
 packet_data_attrs:
   CATDESC: packet data
