--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,10 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-cdflib = "==1.3.1"
-imap-data-access = ">=0.5.0"
+cdflib = "^1.3.1"
+imap-data-access = ">=0.10.1"
 python = ">=3.9,<4"
-space_packet_parser = "^4.2.0"
+space_packet_parser = "^5.0.1"
 spiceypy = ">=6.0.0"
 xarray = '>=2023.0.0'
 pyyaml = "^6.0.1"
